add exceptions, validation and commentaries